# GeoSnap

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Fotos2KMZ.spec  GeoSnap.spec  LICENSE  README.md  SECURITY.md  build.py  geosnap_app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: clean.py  leer_metadata.py
src/: run.py
src/fotos2kmz/: config.py  exceptions.py  extractor.py  generators.py  gui.py  main.py
src/geosnap/: batch_processor.py  config.py  constants.py  exceptions.py  extractor.py  generators.py  gui.py  importer.py  main.py  models.py  processor.py  settings.py
tests/: test_config.py  test_extractor.py  test_generators.py  test_gui.py  test_importer.py  test_integration.py  test_main.py  verify_no_gps.py
