[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geosnap"
version = "2.1.0"
description = "Transform geotagged photos into KMZ reports for Google Earth and Excel spreadsheets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "GeoSnap Contributors"}
]
keywords = ["geotagged", "photos", "kmz", "kml", "google-earth", "exif", "gps"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "Pillow>=12.0.0",
    "pillow-heif>=1.1.1",
    "simplekml>=1.3.6",
    "openpyxl>=3.1.5",
    "ttkbootstrap>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "types-Pillow",
    "types-openpyxl",
]
magnetic = [
    "geomag>=0.9",
]

[project.scripts]
geosnap = "geosnap.gui:main"

[project.urls]
Homepage = "https://github.com/yourusername/geosnap"
Repository = "https://github.com/yourusername/geosnap"
Issues = "https://github.com/yourusername/geosnap/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "build",
    "dist",
    "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/geosnap"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
